kubernetes/apollo/apps/storage/volsync/app/networkpolicy.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.k8s.io/networkpolicy_v1.json
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: volsync
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: volsync
      app.kubernetes.io/instance: volsync
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - protocol: TCP
          port: 8443
